--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "washman",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://washman.pk",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
